--- a/index.html
+++ b/index.html
@@ -5,10 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <h2>hihjh</h2>
-    <a target="_blank" href="https://calendar.google.com/calendar/event?action=TEMPLATE&amp;tmeid=MzdtcDFraThvbXMybm1tMGk2OXM3NzQzOXYgYW5kcmVzbXEyMDE4QG0&amp;tmsrc=andresmq2018%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_es-419.gif"></a>
+    <script src="./variables.js"></script>
     <script src="./index.js"></script>
+    <div class="container">
+        <input type="text" id="num1">
+        <input type="text" id="num2">
+        <select id="operacion">
+          <option value="+">+</option>
+          <option value="-">-</option>
+          <option value="*">*</option>
+          <option value="/">/</option>
+        </select>
+        <button id="calcular">Calcular</button>
+        <div id="resultado"></div>
+        <h2>No consegui vincular con exito mi js con html</h2>
+      </div>
 </body>
 </html>
