--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </select>
         <button id="calcular">Calcular</button>
         <div id="resultado"></div>
-        <h2>No consegui vincular con exito mi js con html</h2>
+        <h2>Se debe usar la consola para simular la compra de algunos aritulos, No consegui vincular con exito mi js con html.</h2>
       </div>
 </body>
 </html>
