--- a/index.html
+++ b/index.html
@@ -1,27 +1,231 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css">
-</head>
-<body>
-    <script src="./variables.js"></script>
-    <script src="./index.js"></script>
-    <div class="container">
-        <input type="text" id="num1">
-        <input type="text" id="num2">
-        <select id="operacion">
-          <option value="+">+</option>
-          <option value="-">-</option>
-          <option value="*">*</option>
-          <option value="/">/</option>
-        </select>
-        <button id="calcular">Calcular</button>
-        <div id="resultado"></div>
-        <h2>Se debe usar la consola para simular la compra de algunos aritulos, No consegui vincular con exito mi js con html.</h2>
-      </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>YokuYoku</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <aside>
+        <header>
+          <h1 class="logo">Yoku Tienda</h1>
+        </header>
+        <nav>
+          <ul class="menu">
+            <li>
+              <button class="boton-menu boton-categoria active">
+                <i class="bi bi-chevron-right"></i>Todos los productos
+              </button>
+            </li>
+            <li>
+              <button class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Arroz
+              </button>
+            </li>
+            <li>
+              <button class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Fideos
+              </button>
+            </li>
+            <li>
+              <button class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Sushi
+              </button>
+            </li>
+            <li>
+              <a class="boton-menu boton-carrito" href="./html/carrito.html">
+                <i class="bi bi-basket"></i>
+                Carrito
+                <span class="numerito">0</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <nav>
+          <p class="texto-footer">©2023 MAMQ</p>
+        </nav>
+      </aside>
+      <main>
+        <h2 class="titulo-principal">Todos los productos</h2>
+        <div class="contenedor-productos">
+          <div class="producto">
+            <img
+              class="producto-imagen"
+              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
+              alt=""
+            />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 01</h3>
+              <p class="producto-precio">$100</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 02</h3>
+              <p class="producto-precio">$200</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 03</h3>
+              <p class="producto-precio">$300</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 04</h3>
+              <p class="producto-precio">$400</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img
+              class="producto-imagen"
+              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
+              alt=""
+            />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 01</h3>
+              <p class="producto-precio">$100</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 02</h3>
+              <p class="producto-precio">$200</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 03</h3>
+              <p class="producto-precio">$300</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 04</h3>
+              <p class="producto-precio">$400</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img
+              class="producto-imagen"
+              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
+              alt=""
+            />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 01</h3>
+              <p class="producto-precio">$100</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 02</h3>
+              <p class="producto-precio">$200</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 03</h3>
+              <p class="producto-precio">$300</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 04</h3>
+              <p class="producto-precio">$400</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img
+              class="producto-imagen"
+              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
+              alt=""
+            />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 01</h3>
+              <p class="producto-precio">$100</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 02</h3>
+              <p class="producto-precio">$200</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 03</h3>
+              <p class="producto-precio">$300</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+          <div class="producto">
+            <img class="producto-imagen"
+            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
+            alt="" />
+            <div class="producto-detalles">
+              <h3 class="producto-titulo">Abrigo 04</h3>
+              <p class="producto-precio">$400</p>
+              <button class="producto-agregar">Agregar</button>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+    <script src="./js/index.js"></script>
+  </body>
 </html>
