--- a/index.html
+++ b/index.html
@@ -54,178 +54,12 @@
       </aside>
       <main>
         <h2 class="titulo-principal">Todos los productos</h2>
-        <div class="contenedor-productos">
-          <div class="producto">
-            <img
-              class="producto-imagen"
-              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
-              alt=""
-            />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 01</h3>
-              <p class="producto-precio">$100</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 02</h3>
-              <p class="producto-precio">$200</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 03</h3>
-              <p class="producto-precio">$300</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 04</h3>
-              <p class="producto-precio">$400</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img
-              class="producto-imagen"
-              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
-              alt=""
-            />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 01</h3>
-              <p class="producto-precio">$100</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 02</h3>
-              <p class="producto-precio">$200</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 03</h3>
-              <p class="producto-precio">$300</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 04</h3>
-              <p class="producto-precio">$400</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img
-              class="producto-imagen"
-              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
-              alt=""
-            />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 01</h3>
-              <p class="producto-precio">$100</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 02</h3>
-              <p class="producto-precio">$200</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 03</h3>
-              <p class="producto-precio">$300</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 04</h3>
-              <p class="producto-precio">$400</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img
-              class="producto-imagen"
-              src="https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/polloAsiatic-min_xww15s.png"
-              alt=""
-            />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 01</h3>
-              <p class="producto-precio">$100</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 02</h3>
-              <p class="producto-precio">$200</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/cangrejo-min_gdemai.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 03</h3>
-              <p class="producto-precio">$300</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
-          <div class="producto">
-            <img class="producto-imagen"
-            src=https://res.cloudinary.com/dicnsypv0/image/upload/v1671488286/pasta-min_wkuuix.png
-            alt="" />
-            <div class="producto-detalles">
-              <h3 class="producto-titulo">Abrigo 04</h3>
-              <p class="producto-precio">$400</p>
-              <button class="producto-agregar">Agregar</button>
-            </div>
-          </div>
+        <div id="contenedor-productos" class="contenedor-productos">
+          
         </div>
       </main>
     </div>
+    <script src="./js/variables.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
