agregando un filter de categorias

--- a/index.html
+++ b/index.html
@@ -20,23 +20,28 @@
         <nav>
           <ul class="menu">
             <li>
-              <button class="boton-menu boton-categoria active">
+              <button id="todos" class="boton-menu boton-categoria active">
                 <i class="bi bi-chevron-right"></i>Todos los productos
               </button>
             </li>
             <li>
-              <button class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Arroz
+              <button id="platos-principales" class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Platos principales
               </button>
             </li>
             <li>
-              <button class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Fideos
+              <button id="entradas" class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Entradas
               </button>
             </li>
             <li>
-              <button class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Sushi
+              <button id="sopas" class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Sopas
+              </button>
+            </li>
+            <li>
+              <button id="acompañamientos" class="boton-menu boton-categoria">
+                <i class="bi bi-chevron-right"></i>Acompañamiento
               </button>
             </li>
             <li>
@@ -55,7 +60,7 @@
       <main>
         <h2 class="titulo-principal">Todos los productos</h2>
         <div id="contenedor-productos" class="contenedor-productos">
-          
+
         </div>
       </main>
     </div>
