--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             </li>
             <li>
               <button id="acompañamientos" class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Acompañamiento
+                <i class="bi bi-chevron-right"></i>Acompañamientos
               </button>
             </li>
             <li>
               <a class="boton-menu boton-carrito" href="./html/carrito.html">
                 <i class="bi bi-basket"></i>
                 Carrito
-                <span class="numerito">0</span>
+                <span id="numerito" class="numerito">0</span>
               </a>
             </li>
           </ul>
@@ -58,13 +58,14 @@
         </nav>
       </aside>
       <main>
-        <h2 class="titulo-principal">Todos los productos</h2>
+        <h2 id="titulo-principal" class="titulo-principal">Todos los productos</h2>
         <div id="contenedor-productos" class="contenedor-productos">
 
         </div>
       </main>
     </div>
     <script src="./js/variables.js"></script>
+    <script src="./js/carrito.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
