--- a/index.html
+++ b/index.html
@@ -1,71 +1,69 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YokuYoku</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
-    />
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
-  <body>
-    <div class="wrapper">
-      <aside>
-        <header>
-          <h1 class="logo">Yoku Tienda</h1>
-        </header>
-        <nav>
-          <ul class="menu">
-            <li>
-              <button id="todos" class="boton-menu boton-categoria active">
-                <i class="bi bi-chevron-right"></i>Todos los productos
-              </button>
-            </li>
-            <li>
-              <button id="platos-principales" class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Platos principales
-              </button>
-            </li>
-            <li>
-              <button id="entradas" class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Entradas
-              </button>
-            </li>
-            <li>
-              <button id="sopas" class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Sopas
-              </button>
-            </li>
-            <li>
-              <button id="acompañamientos" class="boton-menu boton-categoria">
-                <i class="bi bi-chevron-right"></i>Acompañamientos
-              </button>
-            </li>
-            <li>
-              <a class="boton-menu boton-carrito" href="./html/carrito.html">
-                <i class="bi bi-basket"></i>
-                Carrito
-                <span id="numerito" class="numerito">0</span>
-              </a>
-            </li>
-          </ul>
-        </nav>
-        <nav>
-          <p class="texto-footer">©2023 MAMQ</p>
-        </nav>
-      </aside>
-      <main>
-        <h2 id="titulo-principal" class="titulo-principal">Todos los productos</h2>
-        <div id="contenedor-productos" class="contenedor-productos">
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Yoku Tienda</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <link rel="stylesheet" href="./css/index.css">
+</head>
+<body>
 
-        </div>
-      </main>
+    <div class="wrapper">
+        <header class="header-mobile">
+            <h1 class="logo">Yoku Tienda</h1>
+            <button class="open-menu" id="open-menu">
+                <i class="bi bi-list"></i>
+            </button>
+        </header>
+        <aside>
+            <button class="close-menu" id="close-menu">
+                <i class="bi bi-x"></i>
+            </button>
+            <header>
+                <h1 class="logo">Yoku Tienda</h1>
+            </header>
+            <nav>
+                <ul class="menu">
+                    <li>
+                        <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-chevron-double-right"></i> Todo el Menú</button>
+                    </li>
+                    <li>
+                        <button id="entradas" class="boton-menu boton-categoria"><i class="bi bi-chevron-compact-right"></i> Entradas</button>
+                    </li>
+                    <li>
+                        <button id="platos-principales" class="boton-menu boton-categoria"><i class="bi bi-chevron-compact-right"></i> Platos principales</button>
+                    </li>
+                    <li>
+                        <button id="sopas" class="boton-menu boton-categoria"><i class="bi bi-chevron-compact-right"></i> Sopas</button>
+                    </li>
+                    <li>
+                        <button id="acompañamientos" class="boton-menu boton-categoria"><i class="bi bi-chevron-compact-right"></i> Acompañamientos</button>
+                    </li>                    <li>
+                        <button id="bebidas" class="boton-menu boton-categoria"><i class="bi bi-chevron-compact-right"></i> Bebidas</button>
+                    </li>
+                    <li>
+                        <a class="boton-menu boton-carrito" href="./carrito.html">
+                            <i class="bi bi-cart-fill"></i> Carrito <span id="numerito" class="numerito">0</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <footer>
+                <p class="texto-footer">© 2023 MAMQ</p>
+            </footer>
+        </aside>
+        <main>
+            <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
+            <div id="contenedor-productos" class="contenedor-productos">
+            </div>
+        </main>
     </div>
-    <script src="./js/variables.js"></script>
-    <script src="./js/carrito.js"></script>
+    
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="./js/index.js"></script>
-  </body>
+    <script src="./js/menu.js"></script>
+</body>
 </html>
