--- a/carrito.html
+++ b/carrito.html
@@ -53,7 +53,7 @@
         <h2 class="titulo-principal">Carrito</h2>
         <div class="contenedor-carrito">
           <p id="carrito-vacio" class="carrito-vacio">
-            Tu carrito está vacío 😖 <i class="bi bi-emoji-frown"></i>
+            Tu carrito está vacío 😖
           </p>
 
           <div id="carrito-productos" class="carrito-productos disabled"></div>
