--- a/carrito.html
+++ b/carrito.html
@@ -82,7 +82,7 @@
           </div>
 
           <p id="carrito-comprado" class="carrito-comprado disabled">
-            Muchas gracias por tu compra 🥂 <i class="bi bi-emoji-laughing"></i>
+            Muchas gracias por tu compra 🥂</i>
           </p>
         </div>
       </main>
